Fix for difference in spacing

--- a/themes/simplicity-itself/components/css/partial/base.styl
+++ b/themes/simplicity-itself/components/css/partial/base.styl
@@ -55,7 +55,7 @@ table
       vertical-align text-top
 
 section.container
-  margin 0 layout-margins
+  margin 2em layout-margins
 
 hr
   background-image linear-gradient(left, transparent, color-header-divider, transparent)
