--- a/themes/simplicity-itself/components/css/partial/post-list.styl
+++ b/themes/simplicity-itself/components/css/partial/post-list.styl
@@ -1,6 +1,4 @@
 .post-list
-  margin 2em 0
-
   .post-list-item
     border-bottom 1px solid color-post-list-divider
     padding 1em 0 2em
